Corrigindo o codigo